# CyberSiliconValley

./: .env.example  .gitignore  AGENTS.md  README.md  drizzle.config.ts  ecosystem.config.js  next.config.ts  nginx.conf  package-lock.json  package.json
backend/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/apps/: _runtime_env.py
backend/apps/api/: Dockerfile  pyproject.toml
backend/apps/api/app/: config.py  main.py
backend/apps/api/app/dependencies/: __init__.py
backend/apps/api/app/routers/: auth.py  coach.py  graph.py  health.py  inbox.py  jobs.py  matches.py  onboarding.py  profile.py  resume.py  screening.py  seeking.py
backend/apps/api/src/csv_api/: config.py  main.py
backend/apps/api/src/csv_api/dependencies/: __init__.py
backend/apps/api/src/csv_api/routers/: auth.py  coach.py  companion.py  conversations.py  enterprise_dashboard.py  enterprise_onboarding.py  graph.py  health.py  inbox.py  jobs.py  matches.py  memory.py  onboarding.py  prechat.py  profile.py  resume.py  screening.py  seeking.py  subscription.py  talent_ai.py  talent_dashboard.py  talent_market.py  upload.py
backend/apps/cli/: pyproject.toml
backend/apps/cli/app/: main.py
backend/apps/cli/app/commands/: seed.py
backend/apps/cli/src/csv_cli/: backend.py  main.py
backend/apps/mcp/: pyproject.toml
backend/apps/mcp/app/: main.py
backend/apps/mcp/src/csv_mcp/: backend.py  main.py
backend/apps/worker/: Dockerfile  pyproject.toml
backend/apps/worker/app/: main.py
backend/apps/worker/app/jobs/: __init__.py
backend/apps/worker/src/csv_worker/: __init__.py  main.py
backend/tests/: conftest.py
backend/tests/contract/: test_cli_contract.py  test_mcp_contract.py
backend/tests/integration/: test_ai_streaming_api.py  test_auth_api.py  test_db_session.py  test_health.py  test_inbox_seeking_graph_api.py  test_jobs_matches_api.py  test_profile_api.py  test_remote_api.py  test_seed_pipeline.py  test_worker_ping.py
backend/tests/unit/: test_ai_providers.py  test_ai_services.py  test_ai_workflows.py  test_contracts.py  test_gap_fixes.py  test_init_db_command.py  test_messaging_system.py  test_package_imports.py  test_profile_contracts.py  test_runtime_env.py
docs/: PRD.md  (+2 more)
(+306 files in other folders)
