[project]
name = "csv-backend"
version = "0.1.0"
description = "Python backend for Cyber Silicon Valley"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "sqlalchemy",
  "alembic",
  "psycopg[binary]",
  "bcrypt",
  "itsdangerous",
  "redis",
  "arq",
  "httpx",
  "anyio",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "apps/api",
  "apps/worker",
  "apps/cli",
  "apps/mcp",
  "packages/*",
]

[tool.uv.sources]
csv-contracts = { workspace = true }
csv-core = { workspace = true }
csv-db = { workspace = true }
csv-redis-layer = { workspace = true }
