[project]
name = "csv-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "arq",
  "redis",
  "csv-ai",
  "csv-contracts",
  "csv-db",
  "csv-redis-layer",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["csv_worker*"]
